force-app/main/default/objects/Asset/fields/Device_Status__c.field-meta.xml
<CustomField>
    <fullName>Device_Status__c</fullName>
    <label>Device Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Standby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>