force-app/main/default/objects/Asset/fields/Months_Since_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Purchase__c</fullName>
    <formula>if(year( TODAY())-year( PurchaseDate )=0, month(TODAY())- month(PurchaseDate),

if((year(TODAY())-(year(PurchaseDate)+1))&gt;=1,

(

((year(TODAY()))-(year(PurchaseDate)+1))*12)+

((12-month(PurchaseDate))+month(TODAY())),

(12-month(PurchaseDate))+month(TODAY())))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Since Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>