force-app/main/default/objects/Asset/fields/Product_Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Family__c</fullName>
    <label>Product Sub Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>All-in-One</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Speakers</fullName>
            </value>
            <value>
                <fullName>Other Hardware</fullName>
            </value>
            <value>
                <fullName>Cordless</fullName>
            </value>
            <value>
                <fullName>Saws</fullName>
            </value>
            <value>
                <fullName>Drills</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>