force-app/main/default/objects/Asset/listViews/All_Assets.listView-meta.xml
<ListView>
    <fullName>All_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Sub_Family__c</columns>
    <columns>Device_Status__c</columns>
    <columns>Months_Since_Purchase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>